# thesis-git-stats

./: .gitignore  README.md  git_stats.py  graph.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
